# langchain-playground

./: .env.exemple  .gitignore  docker-compose.yaml  pyproject.toml
reActAgents/: agent_executor.py  callback.py  main.py
vector-dbs/: .env  ingestion.py  main.py  vector_store.py
